--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:types": "tsc —noEmit",
     "test": "jest",
-    "test:watch": "jest --watch",
-    "lint:types": "tsc —noEmit"
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@prisma/client": "^5.17.0",
@@ -18,7 +18,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@playwright/test": "^1.45.3",
+    "@playwright/test": "^1.46.0",
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
