--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "dotenv": "^16.4.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "eslint-config-prettier": "^9.1.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
+    "prettier": "^3.3.3",
     "prisma": "^5.17.0",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2"
